Add users to sidebar

--- a/nimhapkg/tmpl/main.tmpl
+++ b/nimhapkg/tmpl/main.tmpl
@@ -78,6 +78,7 @@
     <li>
       <a href="#submenu2" data-toggle="collapse" aria-expanded="false">Settings</a>
       <ul class="collapse list-unstyled" id="submenu2">
+        <li><a href="/settings/users">- Users</a></li>
         <li><a href="/settings/system">- System commands</a></li>
         <li><a href="/settings/serverinfo">- Server info</a></li>
         <li><a href="/settings/log">- NimHA log</a></li>
