Add user status as attr to #pageType

--- a/nimhapkg/tmpl/main.tmpl
+++ b/nimhapkg/tmpl/main.tmpl
@@ -207,7 +207,7 @@
   </header>
 
   <main>
-    <div id="pageType" data-userid="${c.userid}" data-type="dashboard" style="display: none;"></div>
+    <div id="pageType" data-userid="${c.userid}" data-userstatus="${c.rank}" data-type="dashboard" style="display: none;"></div>
     <div class="wrapper">
       ${genMainSidebar()}
 
