--- a/nimhapkg/tmpl/dashboard.tmpl
+++ b/nimhapkg/tmpl/dashboard.tmpl
@@ -43,7 +43,7 @@
           # if alarmText("disarmed") == "True":
           #   canActivate = "hide"
           # end if
-          <span data-status="disarmed" class="$canActivate activate badge badge-warning">Activate</span>
+          <button data-status="disarmed" class="$canActivate activate badge badge-warning">Activate</button>
         </div>
         <div class="armAway">
           <label>Armed away</label>
@@ -52,7 +52,7 @@
           # if alarmText("armAway") == "True":
           #   canActivate = "hide"
           # end if
-          <span data-status="armAway" class="$canActivate activate badge badge-warning">Activate</span>
+          <button data-status="armAway" class="$canActivate activate badge badge-warning">Activate</button>
         </div>
         <div class="armHome">
           <label>Armed home</label>
@@ -61,7 +61,7 @@
           # if alarmText("armHome") == "True":
           #   canActivate = "hide"
           # end if
-          <span data-status="armHome" class="$canActivate activate badge badge-warning">Activate</span>
+          <button data-status="armHome" class="$canActivate activate badge badge-warning">Activate</button>
         </div>
         <div class="triggered">
           <label>Triggered</label>
