--- a/nimhapkg/tmpl/alarm.tmpl
+++ b/nimhapkg/tmpl/alarm.tmpl
@@ -24,6 +24,8 @@
 
           <h1>Alarm</h1>
 
+          <p>Go to the <a href="/settings/alarmlog">alarm log here</a>.</p>
+
           # let alarmCountdown = getValue(dbAlarm, sql"SELECT value FROM alarm_settings WHERE element = ?", "countdown")
           # let alarmArmtime = getValue(dbAlarm, sql"SELECT value FROM alarm_settings WHERE element = ?", "armtime")
           <div class="alarmDetails">
