--- a/nimhapkg/tmpl/main.tmpl
+++ b/nimhapkg/tmpl/main.tmpl
@@ -81,7 +81,7 @@
         <li><a href="/settings/users">- Users</a></li>
         <li><a href="/settings/system">- System commands</a></li>
         <li><a href="/settings/serverinfo">- Server info</a></li>
-        <li><a href="/settings/log">- NimHA log</a></li>
+        <li><a href="/settings/log">- Server log</a></li>
       </ul>
     </li>
     <li><a href="https://github.com/ThomasTJdev/nim_homeassistant">Github</a></li>
